<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num Of Pax</string>

    <string name="svs">SVS</string>
    <string name="gst">GST</string>

    <string name="discount">Discount(%)</string>
    <string name="total_bill">Total Bill:</string>
    <string name="payment">EachPays:</string>

    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="no_svs">no_svs</string>
    <string name="gst_off">gst_off</string>

</resources>
